--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,11 @@
                 <p>Travel</p>
                 <p>작업 기간 : 7일</p>
             </div>
+            <div class="video_wrap">
+                <a href="https://youtu.be/baVNXk22LL4" target="_blank"><img src="img/thumbnail/inside.jpg" alt="inside" class="thumbnail"></a>
+                <p>Your inside</p>
+                <p>작업 기간 : 4일(6시간)</p>
+            </div>
         </div>
     </main>
     <footer>
