--- a/portfolio.html
+++ b/portfolio.html
@@ -68,6 +68,11 @@
                 <p>Your inside</p>
                 <p>작업 기간 : 4일(6시간)</p>
             </div>
+            <div class="video_wrap">
+                <a href="https://youtube.com/shorts/w1evT2Ty1Iw" target="_blank"><img src="img/thumbnail/supershy.jpg" alt="supershy" class="thumbnail"></a>
+                <p>NEWJEANS x GOSEGU Super Shy</p>
+                <p>작업 기간 : 6시간(3시간 13분)</p>
+            </div>
         </div>
     </main>
     <footer>
